[package]
name = "md-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
maud = "0.26"
markdown = "1"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0"
clap = { version = "4", features = ["derive", "env"] }
tower-http = { version = "0.6", features = ["trace", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
mime_guess = "2"
thiserror = "2"
chrono = "0.4"
anyhow = "1"
percent-encoding = "2"
rand = "0.9"
dotenvy = "0.15"
